input auto complete background issue fixed

--- a/header.css
+++ b/header.css
@@ -99,7 +99,15 @@ select {
   background-color: transparent;
   color: white;
 }
-
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+input[data-autocompleted] {
+  background-color: transparent !important;
+}
+.contact_form_container {
+}
 .form_container {
   display: flex;
   flex-direction: column;
