--- a/header.css
+++ b/header.css
@@ -158,6 +158,7 @@ select.form-control {
   border: 1px solid #ccc;
   border-radius: 4px; /* Optional rounded corners */
   font-size: 16px;
+  align-self: center;
 }
 .form-control:focus {
   border-color: white; /* Keep border white on focus */
@@ -176,6 +177,8 @@ select.form-control {
 }
 .floating-label {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .floating-label input,
@@ -191,8 +194,9 @@ select.form-control {
 
 .floating-label label {
   position: absolute;
-  top: 12px;
-  left: 10px;
+  top: 40%; /* New: Centers the label vertically */
+  transform: translateY(-40%); /* New: Adjusts it to be exactly centered */
+  left: 1rem;
   font-size: 1rem;
   color: #aaa;
   transition: all 0.2s ease-in-out;
@@ -242,7 +246,7 @@ select.form-control {
   opacity: 0; /* Initially invisible */
   transition: opacity 0.3s; /* Fade-in effect */
   font-size: 13px;
-  margin: -6px 6px 0 0;
+  top: 95%;
 }
 
 /* Arrow pointing down */
