--- a/styles/header.css
+++ b/styles/header.css
@@ -54,6 +54,7 @@
 }
 
 .header_nav {
+  position: relative;
   padding: 2.1875rem 8rem;
 }
 
@@ -533,4 +534,31 @@ select {
   .header_nav {
     padding: 1.125rem 1rem;
   }
+}
+
+
+
+.dropdown-menu {
+  display: none; /* Hidden by default */
+  position: fixed;
+  top: 4rem;
+  left: 0;
+  width: 100%;
+  background-color: #1b4f43;
+  transition: all 0.5s ease-in-out;
+  overflow: hidden;
+  z-index: 1000000;
+}
+
+.dropdown-menu__list {
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+  color: white;
+}
+
+.dropdown-menu__item {
+  padding: 1rem;
+  cursor: pointer;
+  color: white;
 }
